[gd_scene load_steps=6 format=2]

[ext_resource path="res://screens/game/hud/hud.png" type="Texture" id=1]
[ext_resource path="res://screens/game/hud/inventory/inventory.gd" type="Script" id=2]
[ext_resource path="res://objects/material/mat1.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/material/mat2.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/material/mat3.tscn" type="PackedScene" id=5]






[node name="inventory" type="Sprite"]

texture = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="mat1" parent="." index="0" instance=ExtResource( 3 )]

position = Vector2( -8, -6 )
_sections_unfolded = [ "Transform" ]

[node name="mat2" parent="." index="1" instance=ExtResource( 4 )]

position = Vector2( -8, -6 )
_sections_unfolded = [ "Transform" ]

[node name="mat3" parent="." index="2" instance=ExtResource( 5 )]

position = Vector2( -8, -9 )


